--- a/index.html
+++ b/index.html
@@ -34,5 +34,8 @@
     ১. শাক-সবজি <br />
     ২. সালাদ <br />
     ৩. মাছ/মাংস/ডিম <br /><br />
+
+    কামরুল আল্লাহর নাম নিয়ে শুরু করো । <br />
+    ইনশাআল্লাহ আল্লাহ স্থাস্থ ভালো করে দিবেন ।
   </body>
 </html>
