--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
     ৩. মাছ/মাংস/ডিম <br /><br />
 
     কামরুল আল্লাহর নাম নিয়ে শুরু করো । <br />
-    ইনশাআল্লাহ আল্লাহ স্থাস্থ ভালো করে দিবেন ।
+    ইনশাআল্লাহ আল্লাহ স্বাস্থ ভালো করে দিবেন ।
   </body>
 </html>
