--- a/index.html
+++ b/index.html
@@ -13,6 +13,30 @@
       (ডা. জাহাঙ্গীর কবিরের ডায়েট চার্ট) </a
     ><br /><br />
 
+    <br /><a
+      style="
+        background-color: rgb(0, 255, 157);
+        padding: 15px;
+        color: white;
+        border-radius: 10px;
+      "
+      href="   https://www.somoynews.tv/news/2021-10-17/%E0%A6%B2%E0%A7%87%E0%A6%AC%E0%A7%81%E0%A6%B0-%E0%A6%B0%E0%A6%B8-%E0%A6%AE%E0%A6%BF%E0%A6%B6%E0%A6%BE%E0%A6%A8%E0%A7%8B-%E0%A6%95%E0%A6%AB%E0%A6%BF-%E0%A6%95%E0%A6%AE%E0%A6%BE%E0%A6%AC%E0%A7%87-%E0%A6%93%E0%A6%9C%E0%A6%A8"
+    >
+      (লেবুর রস মিশানো কফি (সকালে)) </a
+    ><br /><br />
+
+    <br /><a
+      style="
+        background-color: rgb(0, 255, 157);
+        color: white;
+        padding: 15px;
+        border-radius: 10px;
+      "
+      href="https://www.jagonews24.com/lifestyle/article/707967"
+    >
+      (লেবুর রস মিশানো কফি বিস্তারিত (সকালে)) </a
+    ><br /><br />
+
     আমার ১ম সপ্তাহের ডায়েট চার্ট: ডায়েট শুরু করেছি (১২ সেপ্টেম্বর ২০২৩) । ওজন:
     ৬৭ কেজি<br />
     সকালের খাবার: <br />
