--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   </head>
   <body>
     <br /><a
+      style="background-color: rgb(255, 102, 0); padding: 15px; border-radius: 10px"
+      href="adaptation.html"
+      >ফ্যাট অ্যাডাপটেশন কিভাবে শুরু করবেন?</a
+    ><br /><br />
+
+    <br /><a
       style="background-color: red; padding: 15px; border-radius: 10px"
       href="https://www.somoynews.tv/pages/details/198949/%E0%A6%A1%E0%A6%BE.-%E0%A6%9C%E0%A6%BE%E0%A6%B9%E0%A6%BE%E0%A6%99%E0%A7%8D%E0%A6%97%E0%A7%80%E0%A6%B0-%E0%A6%95%E0%A6%AC%E0%A6%BF%E0%A6%B0%E0%A7%87%E0%A6%B0-%E0%A6%A1%E0%A6%BE%E0%A7%9F%E0%A7%87%E0%A6%9F-%E0%A6%9A%E0%A6%BE%E0%A6%B0%E0%A7%8D%E0%A6%9F"
     >
