--- a/index.html
+++ b/index.html
@@ -7,9 +7,23 @@
   </head>
   <body>
     <br /><a
-      style="background-color: rgb(255, 102, 0); padding: 15px; border-radius: 10px"
+      style="
+        background-color: rgb(255, 102, 0);
+        padding: 15px;
+        border-radius: 10px;
+      "
+      href="foodMenu.html"
+      >কোন খাবারে কি থাকে ?</a
+    ><br /><br />
+
+    <br /><a
+      style="
+        background-color: rgb(255, 102, 0);
+        padding: 15px;
+        border-radius: 10px;
+      "
       href="adaptation.html"
-      >ফ্যাট অ্যাডাপটেশন কিভাবে শুরু করবেন?</a
+      >ফ্যাট অ্যাডাপটেশন কিভাবে শুরু করবো?</a
     ><br /><br />
 
     <br /><a
@@ -46,26 +60,26 @@
     আমার ১ম সপ্তাহের ডায়েট চার্ট: ডায়েট শুরু করেছি (১২ সেপ্টেম্বর ২০২৩) । ওজন:
     ৬৭ কেজি<br />
     সকালের খাবার: <br />
-    ১. ২টা ডিম <br />
-    ২. সবজি <br />
+    ১. ২টা ডিম (কুসুম সহ)<br />
+    ২. সবজি (১ কাপ)<br />
     <br />
     দুপুর: <br />
-    ১. অল্প ভাত মেডিসিনের মতো <br />
-    ২. শাক-সবজি <br />
-    ৩. সালাদ <br />
-    ৪ মাছ <br />
-    ৫.মাংস খেলে অল্প পরিমানে<br />
+    ১. ভাত (১ কাপ) <br />
+    ২. শাক-সবজি (১ কাপ) <br />
+    ৩. সালাদ (মিক্স)<br />
+    ৪. সামুদ্রিক মাছ (১ পিস ) <br />
+    ৫.মাংস খেলে অল্প পরিমানে (২ পিস)<br />
     <br />
     বিকেলের নাস্তা: <br />
-    ১. বাদাম <br />
-    ২. মাখন <br />
+    ১. বাদাম () <br />
+
     <br />
     রাতের খাবার:(রাত ৮ টার মধ্যে)<br />
-    ১. শাক-সবজি <br />
-    ২. সালাদ <br />
-    ৩. মাছ/মাংস/ডিম <br /><br />
+    ১. শাক-সবজি (১ কাপ)<br />
+    ২. সালাদ (মিক্স) <br />
+    ৩. মাছ (১ পিস)/ মাংস (২ পিস ) / ডিম (১ টা কুসুম সহ)<br /><br />
 
-    কামরুল আল্লাহর নাম নিয়ে শুরু করো । <br />
-    ইনশাআল্লাহ আল্লাহ স্বাস্থ ভালো করে দিবেন ।
+    আল্লাহর নাম নিয়ে শুরু করলাম । <br />
+    ইনশাআল্লাহ আল্লাহ সফলতা দিবেন
   </body>
 </html>
