--- a/index.html
+++ b/index.html
@@ -80,6 +80,6 @@
     ৩. মাছ (১ পিস)/ মাংস (২ পিস ) / ডিম (১ টা কুসুম সহ)<br /><br />
 
     আল্লাহর নাম নিয়ে শুরু করলাম । <br />
-    ইনশাআল্লাহ আল্লাহ সফলতা দিবেন
+    ইনশাআল্লাহ আল্লাহ সফলতা দিবেন <br /><br /><br />
   </body>
 </html>
